--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 :root {
-    --primary-light: #8e8d8d;
+    --primary-light: #b5b0b0;
   }
 
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Press Start 2P', cursive;
+
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -12,76 +13,258 @@ body {
     margin: 0;
 }
 
+header{
+ height: 15vh;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ font-size: larger;
+}
+
 main {
     display: flex;
-    flex-direction: column;
-    width: auto;
+    flex-direction: column;;
     justify-content: space-between;
-    gap: 3vh;
+    gap: 5vh;
+    align-items: center;
+ 
 }
 
-#score {
+#points {
     display: flex;
-    align-items: end;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4vh;
+    gap : 5vh;
+    min-width: 35vh;
+}
+
+#points> div {
+    flex:1;
+}
+
+#points> div > p {
+    margin-top: 2vh;
+}
+
+.choix{
+    min-width: 25vw;
+    display: flex;
+    justify-content: space-between;
+    gap: 2vh;
+}
+
+.btn {
+    font-size: 25px;
+    color: white;
+    height: auto;
+    margin: 10px;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 15px 15px;
+    position: relative;
+    background: black;
+    width: auto;
+    z-index: 2;
+    cursor: pointer;
+    
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .btn:active {
+    top: 2px;
+  }
+  
+    
+  .btn::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: -10px;
+    right: -10px;
+    background: #969bf9;
+    z-index: -1;
+  }
+  
+  .btn::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 4px;
+    bottom: 4px;
+    left: -6px;
+    right: -6px;
+    background:#c9cbf9;
+    z-index: -1;
+  }
+  
+  
+
+
+.btn-shine {
+    position: relative;
+    margin: 0;
+    padding: 17px 35px;
+    display: flex;
     justify-content: center;
-    margin-top: 10vh;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 0px;
+    z-index: 0;
+    overflow: hidden;
+    transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1); 
+    border: 1px solid;
+    overflow: hidden;
+    position: relative;
+    background-color: #dedff5ae;
+    border:2px solid #191b3e;
+      
 }
+.btn-shine:active {
+    top: 2px;
+}
+  
+  .btn-shine span {
+    font-weight: inherit;
+    letter-spacing: 0.7px;
+    font-size: inherit;
+    font-family: 'Press Start 2P', cursive;
+  }
+  
+
+  
+  .btn-shine:hover span {
+    /* animation: storm1261 0.7s ease-in-out both; */
+    animation-delay: 0.06s;
+  }
+  
+  @keyframes rotate624 {
+    0% {
+      transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+  
+    25% {
+      transform: rotate(3deg) translate3d(0, 0, 0);
+    }
+  
+    50% {
+      transform: rotate(-3deg) translate3d(0, 0, 0);
+    }
+  
+    75% {
+      transform: rotate(1deg) translate3d(0, 0, 0);
+    }
+  
+    100% {
+      transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+  }
+  
+  @keyframes storm1261 {
+    0% {
+      transform: translate3d(0, 0, 0) translateZ(0);
+    }
+  
+    25% {
+      transform: translate3d(4px, 0, 0) translateZ(0);
+    }
+  
+    50% {
+      transform: translate3d(-3px, 0, 0) translateZ(0);
+    }
+  
+    75% {
+      transform: translate3d(2px, 0, 0) translateZ(0);
+    }
+  
+    100% {
+      transform: translate3d(0, 0, 0) translateZ(0);
+    }
+  }
+  
+
+  
+  .btn-shine span {
+    z-index: 2;
+  }
+  
+  .btn-shine:after {
+    background: #191b3e;
+    content: "";
+    height: 155px;
+    left: -75px;
+    opacity: 0.4;
+    position: absolute;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    width: 50px;
+    z-index: -10;
+  }
+  
+  .btn-shine:hover:after {
+    left: 120%;
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
 
 
-.choix>button {
-    margin-top: 15px;
-    font-size: 16px;
-    padding: 10px;
-    border-radius: 100px;
-    color: #F9FAF8;
-    border-color: #ffff;
-}
 .choix>button>img {
     display: flex;
-    width: 30px;
+    width: 40px;
 }
 
 .choix:disabled {
     background-color: #ffffff;
 }
 
+#resultat{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3vh;
+}
+
 .fin {
     color: #00000075;
 }
 
-.reset {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    padding: 10px 35px;
-    border-radius: 10px;
-    margin-top: 15px;
-    font-size: 16px;
-    font-weight: bold;
-    border-color: #ffff;
-}
-
-.reset:hover{
-    background-color: #ffffff;
-    color: #3882F6;
-}
 
 .footer {
-    bottom: 0;
+
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
     color: var(--primary-light);
-    font-size: 20px;
+    font-size: inherit;
     flex: 1 1 auto;
+    background:linear-gradient(to left, #8f94fb, #2a2d64);
+
 }
 .fa-github {
     color: var(--primary-light);
     font-size: 24px;
     transition: transform 0.3s ease-in-out;
-  }
+}
   
   .fa-github:hover {
     transform: rotate(360deg) scale(1.2);
+  }
+
+  .z3{
+    z-index: 3;
+    margin-bottom: 1vh;
+    
   }
 
   /* *{
