ajout \n et line height entre les para

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ main {
     transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
     width: 50px;
     z-index: -10;
+  
   }
   
   .btn-shine:hover:after {
@@ -268,6 +269,7 @@ main {
     
   }
 
-  *{
+  /* *{
     border: 1px solid black;
-  }
+  } */
+
